<resources>
    <string name="indian_constitution_english">INDIAN CONSTITUTION</string>
    <string name="indian_constitution_hindi">भारतीय संविधान</string>

    <string name="app_name">Indian Constitution</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preamble">PREAMBLE</string>
    <string name="title_activity_parts">PARTS</string>
    <string name="title_activity_schedules">SCHEDULES</string>
    <string name="title_activity_amendments">AMENDMENTS</string>
    <string name="title_activity_scrolling">CONSTITUTION</string>
    <string name="banner_ad_unit_id">ca-app-pub-8103354595257586/4331275952</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- REVAMPED APP -->

    <!-- SPLASH -->
    <string name="indian_monuments">Indian Monuments</string>
    <string name="line_separator">Line Separator</string>

    <!-- HOME FRAGMENT -->
    <string name="header_home">HOME</string>
    <string name="featured_home">Learning Zone</string>
    <string name="categories_home">Categories</string>
    <string name="recently_opened_home">Recent Items</string>
    <string name="tags_home">Tags</string>

    <!-- FEATURED FRAGMENT <- HOME FRAGMENT -->
    <string name="preamble_featured">PREAMBLE</string>
    <string name="your_progress_featured">YOUR PROGRESS</string>
    <string name="saved_by_you_featured">SAVED BY YOU</string>

    <!-- CATEGORIES ADAPTER <- HOME FRAGMENT -->
    <string name="amendments_categories">AMENDMENTS</string>
    <string name="schedules_categories">SCHEDULES</string>
    <string name="parts_categories">PARTS</string>
    <string name="preamble_categories">PREAMBLE</string>

    <string name="bookmark_button">Bookmark Button</string>

    <string name="lorem_ipsum_content">
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n

  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?\n\n
 </string>

    <string name="view_all">VIEW ALL</string>
    <string name="bookmarks">BOOKMARK</string>
    <string name="category">Category</string>
    <string name="all_saved_items">All Saved</string>
    <string name="dummy_save_count">0 SAVED</string>
    <string name="save">SAVE</string>
    <string name="saved">SAVED</string>
    <string name="share">SHARE</string>
    <string name="share_small">Share</string>
    <string name="save_status_unsaved">SAVE</string>
    <string name="rate">RATE APP</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="loading">LOADING..</string>
    <string name="load_complete">LOAD COMPLETE</string>
    <string name="no_items_saved">NO SAVED ITEMS</string>
    <string name="sample_book_name">THE SUBTLE ART OF NOT GIVING A F*CK</string>
    <string name="sample_author">MARK MANSON</string>
    <string name="view_book">VIEW BOOK</string>
    <string name="order_now">ORDER NOW</string>
    <string name="opening_book_link">Opening the book link for you.</string>
    <string name="data_sync_success">Data sync success. Enjoy the app!</string>
    <string name="was_saved">saved</string>
    <string name="was_removed">removed</string>
    <string name="plain_text_share_type">text/plain</string>
    <string name="i_am_sharing">Hi. I am sharing</string>
    <string name="with_you">with you.</string>
    <string name="whatsapp_package">com.whatsapp</string>
    <string name="get_constitution_app">Get the Constitution App *HERE:*</string>
    <string name="sharing">Sharing</string>
    <string name="rate_app_play_store">Rate App on Play Store</string>
    <string name="buy_on_amazon">BUY ON AMAZON</string>
    <string name="color_black">#000000</string>

</resources>