<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:layout_height="180dp"
    android:id="@+id/fullPage"
    tools:context=".ui.home.fragments.home_fragment.featured_fragment.FeaturedFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainBackgroundView">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHorizontal_weight="1.5"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/contentHolder"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:id="@+id/coverIvHolder">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/skeleton_one"
                    tools:ignore="ContentDescription"
                    android:id="@+id/coverIv"/>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="4"
                android:id="@+id/contentHolder"
                app:layout_constraintStart_toEndOf="@id/coverIvHolder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/sample_book_name"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    fontPath="fonts/read_english_semi_bold.ttf"
                    android:paddingTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    tools:textStyle="bold"
                    android:lines="1"
                    android:ellipsize="end"
                    android:id="@+id/bookTitleTv"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/sample_author"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintTop_toBottomOf="@id/bookTitleTv"
                    app:layout_constraintStart_toStartOf="parent"
                    fontPath="fonts/read_english_semi_bold.ttf"
                    android:layout_marginTop="3dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:lines="1"
                    android:id="@+id/bookAuthorTv"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/lorem_ipsum_content"
                    android:textColor="@color/short_description_color"
                    app:layout_constraintTop_toBottomOf="@id/bookAuthorTv"
                    app:layout_constraintStart_toStartOf="parent"
                    fontPath="fonts/read_english_regular.ttf"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:lines="3"
                    android:ellipsize="end"
                    android:id="@+id/bookShortDescriptionTv"
                    tools:ignore="MissingPrefix" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/bookShortDescriptionTv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    fontPath="fonts/read_english_semi_bold.ttf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/black"
                    android:id="@+id/viewBookCard">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:lines="1"
                        android:ellipsize="end"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/view_book"/>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>